--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,11 @@ hex = "0.4.3"
 pcap = "2.3.0"
 pcap-parser = "0.17.0"
 regex = "1.12.2"
+# GUI for in-app plotting (egui/eframe)
+# Use `eframe` for the native window. Add plotters + image to render/export plots if needed.
+eframe = "0.27"
+
+# Plotting libraries (static image output/backends)
+plotters = "0.3"
+plotters-bitmap = "0.3"
+image = "0.24"
